Adds experimental support for JDK 9 and 10.